# prqlc-r

./: .Rbuildignore  .editorconfig  .gitignore  .lintr  .mega-linter.yml  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  authors.html  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
R/: 000-wrappers.R  compile.R  extendr-wrappers.R  knitr-engine.R  utils.R  version.R  wrappers.R  zzz.R
articles/: index.html  knitr.html  prqlr.html
dev/: LICENSE-text.html  LICENSE.html  authors.html  config-lib.R  generate-authors.R  generate-lib-sums.R  generate-license-note.R  generate-sticker.R  index.html  pkgdown.yml  search.json  sitemap.xml  vendoring.R
inst/: AUTHORS
man/: available_dialects.Rd  compile.Rd  format_prql.Rd  json_to_prql.Rd  prql_available_dialects.Rd  prql_available_targets.Rd  prql_compile.Rd  prql_compiler_version.Rd  prql_get_targets.Rd  prql_to_json.Rd  prql_to_sql.Rd  prql_version.Rd  prqlr-package.Rd  unwrap.Rd
news/: index.html
reference/: format_prql.html  index.html  json_to_prql.html  prql_available_dialects.html  prql_compile.html  prql_get_targets.html  prql_to_json.html  prql_to_sql.html  prql_version.html  prqlr-package.html  prqlr.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  init.c  prqlr-win.def  (+1 more)
src/rust/: Cargo.toml  api.h  vendor-config.toml
src/rust/src/: lib.rs  utils.rs
(+42 files in other folders)
