[package]
name = "prqlr"
version = "0.11.1"
edition = "2021"
rust-version = "1.65"
publish = false

[lib]
crate-type = ['staticlib']
name = "prqlr"

[dependencies]
savvy = "0.2.11"
# prqlc= { version = "0.11.2", default-features = false }
# prqlc 0.11.2 is not compatible with Rust 1.65, so a slightly modified version is installed
# See https://github.com/PRQL/prql/pull/4001
prqlc = { git = "https://github.com/PRQL/prql", rev = "942102b4c3cebd20e62463d22394d39d89b6fb7b", default-features = false }
anstream = { version = "0.3.2", features = ["auto"] }
