[package]
name = "prqlr"
version = "0.13.3"
edition = "2021"
# TODO: change this to 1.75.0 after https://github.com/PRQL/prql/issues/5491 is resolved
rust-version = "1.84.0"
publish = false

[lib]
crate-type = ['staticlib']
name = "prqlr"

[dependencies]
savvy = "0.8"
prqlc= { version = "0.13.5", default-features = false }
